# ab-devcontainer

./: .gitignore  Dockerfile  README.md  devcontainer.json  make-mac-multidocker.sh  pip-requirements.txt  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
mac/: Readme.md  synthetic.conf
