[project]
name = "ab-devcontainer"
version = "0.1.0"
description = "Python environment for devcontainer"
requires-python = ">=3.13"
dependencies = [
    "boto3",
    "ipykernel",
    "mysql-connector-python",
    "neo4j",
    "numpy",
    "pandas",
    "psycopg[binary]",
    "pymilvus[bulk_writer,model]",
    "python-dotenv",
    "pyyaml",
    "SQLAlchemy",
    "tiktoken",
    "tqdm",
]
