[project]
name = "ab-devcontainer"
version = "0.1.1"
description = "Python environment for devcontainer"
requires-python = ">=3.13"
dependencies = [
    "boto3",
    "duckdb",
    "httpx",
    "fastapi",
    "ipykernel",
    "jinja2",
    # "lmstudio",
    "mcp[cli]",
    "mysql-connector-python",
    "neo4j",
    "numpy",
    "openai",
    "pandas",
    "psycopg[binary]",
    "pymilvus[bulk_writer,model]",
    "python-dotenv",
    "pyyaml",
    "sentence_transformers",
    "sqlparse",
    "SQLAlchemy",
    "tiktoken",
    "torch",
    "tqdm",
]
